// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/LocalDateTime should render date with timezone enabled 1`] = `
<LocalDateTime
  enableTimezone={true}
  eventTime={1515788113000}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
>
  <time
    className="post__time"
    dateTime="2018-01-12T20:15:13.000Z"
    title="Sat Jan 13 2018 07:15:13 GMT+1100 (Australia/Sydney)"
  >
    <FormattedTime
      hour12={true}
      timeZone="Australia/Sydney"
      value={2018-01-12T20:15:13.000Z}
    >
      <span>
        7:15 AM
      </span>
    </FormattedTime>
  </time>
</LocalDateTime>
`;

exports[`components/LocalDateTime should render date with timezone enabled, in military time 1`] = `
<LocalDateTime
  enableTimezone={true}
  eventTime={1515816913000}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
  useMilitaryTime={true}
>
  <time
    className="post__time"
    dateTime="2018-01-13T04:15:13.000Z"
    title="Sat Jan 13 2018 15:15:13 GMT+1100 (Australia/Sydney)"
  >
    <FormattedTime
      hour12={false}
      timeZone="Australia/Sydney"
      value={2018-01-13T04:15:13.000Z}
    >
      <span>
        15:15
      </span>
    </FormattedTime>
  </time>
</LocalDateTime>
`;

exports[`components/LocalDateTime should render date without timezone 1`] = `
<LocalDateTime
  eventTime={1515759313000}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
>
  <time
    className="post__time"
    dateTime="2018-01-12T12:15:13.000Z"
    title="Fri Jan 12 2018 12:15:13 GMT+0000"
  >
    <FormattedTime
      hour12={true}
      value={2018-01-12T12:15:13.000Z}
    >
      <span>
        12:15 PM
      </span>
    </FormattedTime>
  </time>
</LocalDateTime>
`;

exports[`components/LocalDateTime should render date without timezone enabled 1`] = `
<LocalDateTime
  enableTimezone={false}
  eventTime={1515759313000}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
>
  <time
    className="post__time"
    dateTime="2018-01-12T12:15:13.000Z"
    title="Fri Jan 12 2018 12:15:13 GMT+0000"
  >
    <FormattedTime
      hour12={true}
      value={2018-01-12T12:15:13.000Z}
    >
      <span>
        12:15 PM
      </span>
    </FormattedTime>
  </time>
</LocalDateTime>
`;

exports[`components/LocalDateTime should render date without timezone enabled, in military time 1`] = `
<LocalDateTime
  enableTimezone={false}
  eventTime={1515770113000}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  timeZone="Australia/Sydney"
  useMilitaryTime={true}
>
  <time
    className="post__time"
    dateTime="2018-01-12T15:15:13.000Z"
    title="Fri Jan 12 2018 15:15:13 GMT+0000"
  >
    <FormattedTime
      hour12={false}
      value={2018-01-12T15:15:13.000Z}
    >
      <span>
        15:15
      </span>
    </FormattedTime>
  </time>
</LocalDateTime>
`;
